--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
-<a href="https://www.tomspage.org/images/nothing.jpg" target="_blank"><img src="images/statement.jpg" title="April 18, 2019"></a>
+<a href="https://www.tomspage.org/images/nothing.JPG" target="_blank"><img src="images/statement.jpg" title="April 18, 2019"></a>
 <a href="https://www.tomspage.org/images/forecasts%20call%20for.jpg" target="_blank"><img src="images/sky.jpg" title="April 17, 2019"></a>
 <img src="images/march.jpg" title="April 16, 2019">
 <a href="https://youtu.be/SIxOl1EraXA?t=218" target="_blank"><img src="images/vive.jpg" title="April 16, 2019 | Vive la France"></a>
