--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<a href="https://billwurtz.com/wecouldjustgethigh.mp3" target="_blank"><img src="images/nite flight.jpg" title="April 20, 2019"></a>
 <img src="images/preflight.jpg" title="April 19, 2019">
 <a href="https://www.tomspage.org/images/nothing.JPG" target="_blank"><img src="images/statement.jpg" title="April 18, 2019"></a>
 <a href="https://www.tomspage.org/images/forecasts%20call%20for.jpg" target="_blank"><img src="images/sky.jpg" title="April 17, 2019"></a>
