--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<img src="images/advisory.jpg" title="April 22, 2019">
 <a href="https://www.youtube.com/watch?v=yc3Jo65Lct4" target="_blank"><img src="images/query.jpg" title="April 21, 2019"></a>
 <a href="https://billwurtz.com/wecouldjustgethigh.mp3" target="_blank"><img src="images/nite flight.jpg" title="April 20, 2019"></a>
 <img src="images/preflight.jpg" title="April 19, 2019">
