--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<img src="images/hot tip 8.jpg" title="April 26, 2019">
 <img src="images/my%20friend.jpg" title="April 25, 2019">
 <img src="images/fact check.jpg" title="April 24, 2019">
 <a href="https://www.youtube.com/watch?v=GAlGgczQ6jM" target="_blank"><img src="images/general anxiety.jpg" title="April 23, 2019"></a>
