--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ img {
 
 <img src="images/hot tip 8.jpg" title="April 26, 2019">
 <img src="images/my%20friend.jpg" title="April 25, 2019">
-<img src="images/fact check.jpg" title="April 24, 2019">
+<a href="https://www.tomspage.org/images/hope%20sonnet.jpg" target="_blank"><img src="images/fact check.jpg" title="April 24, 2019"></a>
 <a href="https://www.youtube.com/watch?v=GAlGgczQ6jM" target="_blank"><img src="images/general anxiety.jpg" title="April 23, 2019"></a>
 <img src="images/advisory.jpg" title="April 22, 2019">
 <a href="https://www.youtube.com/watch?v=yc3Jo65Lct4" target="_blank"><img src="images/query.jpg" title="April 21, 2019"></a>
