--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=YJsa0OfWcGA" target="_blank"><img src="images/5th.jpg" title="April 27, 2019"></a>
+<a href="https://www.instagram.com/p/BtY4OCzHgSH/" target="_blank"><img src="images/kit.jpg" title="April 27, 2019"></a>
+<img src="images/4.27.19.jpg" title="April 27, 2019">
 <img src="images/hot tip 8.jpg" title="April 26, 2019">
 <img src="images/my%20friend.jpg" title="April 25, 2019">
 <a href="https://www.tomspage.org/images/hope%20sonnet.jpg" target="_blank"><img src="images/fact check.jpg" title="April 24, 2019"></a>
