--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<img src="images/daily been.jpg" title="April 28, 2019">
 <a href="https://www.youtube.com/watch?v=YJsa0OfWcGA" target="_blank"><img src="images/5th.jpg" title="April 27, 2019"></a>
 <a href="https://www.instagram.com/p/BtY4OCzHgSH/" target="_blank"><img src="images/kit.jpg" title="April 27, 2019"></a>
 <img src="images/4.27.19.jpg" title="April 27, 2019">
