--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
-<a href="https://www.youtube.com/watch?v=SvDvtgVG-xo&feature=youtu.be&t=63" target="_blank"><img src="images/get yours.jpg" title="April 29, 2019"></a>
+<a href="https://youtu.be/SvDvtgVG-xo?t=125" target="_blank"><img src="images/get yours.jpg" title="April 29, 2019"></a>
 <img src="images/daily been.jpg" title="April 28, 2019">
 <a href="https://www.youtube.com/watch?v=YJsa0OfWcGA" target="_blank"><img src="images/5th.jpg" title="April 27, 2019"></a>
 <a href="https://www.instagram.com/p/BtY4OCzHgSH/" target="_blank"><img src="images/kit.jpg" title="April 27, 2019"></a>
