--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
-<a href="https://www.google.com/search?tbm=isch&q=the%20human%20condition%20painting"><img src="images/square landscape portrait.jpg" title="April 30, 2019 | Six months of pictures!!!"></a>
-<a href="https://www.tomspage.org/images/jack%20truck.jpg"><img src="images/homestead.jpg" title="April 30, 2019 | Six months of pictures!!!"></a>
+<a href="https://www.google.com/search?tbm=isch&q=the%20human%20condition%20painting" target="_blank><img src="images/square landscape portrait.jpg" title="April 30, 2019 | Six months of pictures!!!"></a>
+<a href="https://www.tomspage.org/images/jack%20truck.jpg" target="_blank><img src="images/homestead.jpg" title="April 30, 2019 | Six months of pictures!!!"></a>
 <a href="https://youtu.be/SvDvtgVG-xo?t=125" target="_blank"><img src="images/get yours.jpg" title="April 29, 2019"></a>
 <img src="images/daily been.jpg" title="April 28, 2019">
 <a href="https://www.youtube.com/watch?v=YJsa0OfWcGA" target="_blank"><img src="images/5th.jpg" title="April 27, 2019"></a>
