--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ img {
 }
 </style>
 
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
+
+<img src="images/portrait of the artist 5.1.19.jpg" title="May 1, 2019">
+
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
 <a href="https://www.google.com/search?tbm=isch&q=the%20human%20condition%20painting" target="_blank"><img src="images/square landscape portrait.jpg" title="April 30, 2019 | Six months of pictures!!!"></a>
