--- a/index.html
+++ b/index.html
@@ -261,3 +261,5 @@ img {
 </br>
 </br>
 <h1 style="font-family:garamond;text-align:right;"><i>by Tom</i></h1>
+
+<p style="font-family:Trebuchet MS;"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
