--- a/index.html
+++ b/index.html
@@ -261,5 +261,7 @@ img {
 </br>
 </br>
 <h1 style="font-family:garamond;text-align:right;"><i>by Tom</i></h1>
+</br>
+</br>
+<p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 
-<p style="font-family:Trebuchet MS;"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
