--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=fX36mGEqfw4" target="_blank"><img src="images/mug.jpg" title="May 2, 2019"></a>
 <img src="images/portrait of the artist 5.1.19.jpg" title="May 1, 2019">
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
