--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/hot tips 1-9.jpg" target="_blank"><img src="images/hot tip 9.jpg" title="May 5, 2019"></a>
 <a href="https://youtu.be/ZKaOqZvlRrI?t=28" target="_blank"><img src="images/vert.jpg" title="May 4, 2019"></a>
 <a href="https://www.youtube.com/watch?v=ERoS6y5zE0Y&feature=youtu.be&t=18" target="_blank"><img src="images/keen eye%21.jpg" title="May 3, 2019"></a>
 <a href="https://www.youtube.com/watch?v=fX36mGEqfw4" target="_blank"><img src="images/mug.jpg" title="May 2, 2019"></a>
