--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=I8j7XJxew7s" target="_blank"><img src="images/purple.jpg" title="May 7, 2019"></a>
 <img src="images/junction.jpg" title="May 6, 2019">
 <a href="https://www.tomspage.org/images/window 5.6.19.jpg" target="_blank"><img src="images/viewing.jpg" title="May 6, 2019"></a>
 <a href="https://www.tomspage.org/images/hot tips 1-9.jpg" target="_blank"><img src="images/hot tip 9.jpg" title="May 5, 2019"></a>
