--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<img src="images/QnA 5.9.19.jpg" title="May 9, 2019">
 <a href="https://www.tomspage.org/images/not as far west.jpg" target="_blank"><img src="images/two hours east.jpg" title="May 8, 2019"></a>
 <img src="images/hot tip 10.jpg" title="May 8, 2019">
 <a href="https://www.youtube.com/watch?v=I8j7XJxew7s" target="_blank"><img src="images/purple.jpg" title="May 7, 2019"></a>
