--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/cubish%20prime.jpg" target="_blank"><img src="images/cubish a.jpg" title="May 11, 2019"></a>
+<a href="https://www.tomspage.org/images/cubish%20prime.jpg" target="_blank"><img src="images/cubish b.jpg" title="May 11, 2019"></a>
+<a href="https://www.tomspage.org/images/cubish%20prime.jpg" target="_blank"><img src="images/cubish c.jpg" title="May 11, 2019"></a>
 <img src="images/sudden.jpg" title="May 10, 2019">
 <img src="images/QnA 5.9.19.jpg" title="May 9, 2019">
 <a href="https://www.tomspage.org/images/not as far west.jpg" target="_blank"><img src="images/two hours east.jpg" title="May 8, 2019"></a>
