--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<img src="images/portrait of the artist 5.14.19.jpg" title="May 14, 2019">
 <img src="images/5.13.19.jpg" title="May 13, 2019">
 <a href="https://www.tomspage.org/images/interjection.jpg" target="_blank"><img src="images/interjection 2.jpg" title="May 12, 2019"></a>
 <a href="https://www.tomspage.org/images/cubish%20prime.jpg" target="_blank"><img src="images/cubish a.jpg" title="May 11, 2019"></a>
