--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=m_5MtGCWImE" target="_blank"><img src="images/charge.jpg" title="May 17, 2019"></a>
 <img src="images/OK.jpg" title="May 16, 2019">
 <img src="images/recognition %28The Thanksgiving%29.jpg" title="May 15, 2019">
 <img src="images/portrait of the artist 5.14.19.jpg" title="May 14, 2019">
