--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
-<a href="https://www.youtube.com/watch?v=HUOJ4dCj5UA" target="_blank"><img src="images/here today.jpg" title="May 20, 2019"></a>
+<a href="https://www.youtube.com/watch?v=TIPWV9NEbgE" target="_blank"><img src="images/here today.jpg" title="May 20, 2019"></a>
 <img src="images/FAQ 5.19.19.jpg" title="May 19, 2019">
 <img src="images/bleed%21 bleed%21 bleed%21.jpg" title="May 18, 2019">
 <a href="https://www.youtube.com/watch?v=m_5MtGCWImE" target="_blank"><img src="images/charge.jpg" title="May 17, 2019"></a>
