--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ img {
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
 <img src="images/sightline.jpg" title="May 22, 2019">
-<img src="images/qualified.jpg" title="May 22, 2019">
+<a href="https://www.youtube.com/watch?v=msEwocR-ti4" target="_blank"><img src="images/qualified.jpg" title="May 22, 2019"></a>
 <img src="images/in years to come.jpg" title="May 21, 2019">
 <a href="https://www.youtube.com/watch?v=TIPWV9NEbgE" target="_blank"><img src="images/here today.jpg" title="May 20, 2019"></a>
 <img src="images/FAQ 5.19.19.jpg" title="May 19, 2019">
