--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<img src="images/alright.jpg" title="May 24, 2019">
 <img src="images/man in the mirror.jpg" title="May 23, 2019">
 <img src="images/sightline.jpg" title="May 22, 2019">
 <a href="https://www.youtube.com/watch?v=msEwocR-ti4" target="_blank"><img src="images/qualified.jpg" title="May 22, 2019"></a>
