--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
+<img src="images/dear reader%2C.jpg" title="May 25, 2019">
 <img src="images/alright.jpg" title="May 24, 2019">
 <img src="images/man in the mirror.jpg" title="May 23, 2019">
 <img src="images/sightline.jpg" title="May 22, 2019">
