--- a/index.html
+++ b/index.html
@@ -46,9 +46,16 @@ img {
 }
 </style>
 
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
+
+<img src="images/portrait of the artist 6.1.19.jpg" title="June 1, 2019">
+
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    May 2019    ––––</i></p>
 
-<img src="images/dear reader%2C.jpg" title="May 25, 2019">
+<img src="images/pod.jpg" title="May 31, 2019 (released June 1, 2019)">
+<a href="https://www.tomspage.org/videos/heroic.mp4" target="_blank"><img src="images/heroic 2.jpg" title="May 29, 2019 (released June 1, 2019)"></a>
+<a href="https://www.tomspage.org/images/usually%20breaking%20news.jpg" target="_blank"><img src="images/unusually breaking news.jpg" title="May 29, 2019 (released June 1, 2019)"></a>
+<img src="images/dear reader%2C.jpg" title="May 25, 2019 | 100 straight days of pictures!">
 <img src="images/alright.jpg" title="May 24, 2019">
 <img src="images/man in the mirror.jpg" title="May 23, 2019">
 <img src="images/sightline.jpg" title="May 22, 2019">
