--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<img src="images/sale.jpg" title="June 3, 2019">
 <a href="https://www.youtube.com/watch?v=GRtoasiwh24" target="_blank"><img src="images/reach.jpg" title="June 2, 2019"></a>
 <a href="https://www.youtube.com/watch?v=ponjw2FgL_k" target="_blank"><img src="images/portrait of the artist 6.1.19.jpg" title="June 1, 2019"></a>
 
