--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<img src="images/eye.jpg" title="June 7, 2019">
 <img src="images/hot tip 12.jpg" title="June 6, 2019">
 <img src="images/behold.jpg" title="June 6, 2019">
 <img src="images/hits.jpg" title="June 5, 2019">
