--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=y-JqH1M4Ya8&feature=youtu.be&t=120" target="_blank"><img src="images/bluebird.jpg" title="June 9, 2019"></a>
 <img src="images/dolly.jpg" title="June 8, 2019">
 <img src="images/eye.jpg" title="June 7, 2019">
 <img src="images/hot tip 12.jpg" title="June 6, 2019">
