--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
-<a href="https://commons.wikimedia.org/wiki/File:Gustave_Dor%C3%A9_-_Dante_Alighieri_-_Inferno_-_Plate_8_(Canto_III_-_Abandon_all_hope_ye_who_enter_here).jpg" target="_blank"><img src="images/abandon.jpg" title="June 11, 2019"></a>
+<a href="https://commons.wikimedia.org/wiki/File:Gustave_Dor%C3%A9_-_Dante_Alighieri_-_Inferno_-_Plate_8_(Canto_III_-_Abandon_all_hope_ye_who_enter_here).jpg" target="_blank"><img src="images/abandon.jpg" title="ABANDON ALL HOPE, YE WHO ENTER HERE"></a>
 <a href="https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/turn it again.jpg" title="June 10, 2019"></a>
 <a href="https://www.youtube.com/watch?v=y-JqH1M4Ya8&feature=youtu.be&t=120" target="_blank"><img src="images/bluebird.jpg" title="June 9, 2019"></a>
 <img src="images/dolly.jpg" title="June 8, 2019">
