--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<img src="images/george.jpg" title="June 15, 2019">
+<img src="images/one.jpg" title="June 15, 2019">
 <img src="images/cycle.jpg" title="June 14, 2019">
 <img src="images/wild.jpg" title="June 14, 2019">
 <a href=" https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/reflection 6.12.19.jpg" title="June 12, 2019"></a>
