--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<img src="images/beyond great.jpg" title="June 16, 2019">
 <img src="images/george.jpg" title="June 15, 2019">
 <img src="images/one.jpg" title="June 15, 2019">
 <img src="images/cycle.jpg" title="June 14, 2019">
