--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<img src="images/portrait of the artist 6.19.19.jpg" title="June 19, 2019">
 <img src="images/exhibit.jpg" title="June 18, 2019">
 <img src="images/is there life on mars%3F.jpg" title="June 17, 2019">
 <img src="images/beyond great.jpg" title="June 16, 2019">
