--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
-<img src="images/portrait of the artist 6.19.19.jpg" title="June 19, 2019">
+<a href="https://www.youtube.com/watch?v=2A-uBz0gMXw" target="_blank"><img src="images/portrait of the artist 6.19.19.jpg" title="June 19, 2019"></a>
 <img src="images/exhibit.jpg" title="June 18, 2019">
 <img src="images/is there life on mars%3F.jpg" title="June 17, 2019">
 <img src="images/beyond great.jpg" title="June 16, 2019">
@@ -56,8 +56,8 @@ img {
 <img src="images/one.jpg" title="June 15, 2019">
 <img src="images/cycle.jpg" title="June 14, 2019">
 <img src="images/wild.jpg" title="June 14, 2019">
-<a href=" https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/reflection 6.12.19.jpg" title="June 12, 2019"></a>
-<a href="https://commons.wikimedia.org/wiki/File:Gustave_Dor%C3%A9_-_Dante_Alighieri_-_Inferno_-_Plate_8_(Canto_III_-_Abandon_all_hope_ye_who_enter_here).jpg" target="_blank"><img src="images/abandon.jpg" title="ABANDON ALL HOPE, YE WHO ENTER HERE"></a>
+<a href="https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/reflection 6.12.19.jpg" title="June 12, 2019"></a>
+<a href="https://commons.wikimedia.org/wiki/File:Gustave_Dor%C3%A9_-_Dante_Alighieri_-_Inferno_-_Plate_8_(Canto_III_-_Abandon_all_hope_ye_who_enter_here).jpg" target="_blank"><img src="images/abandon.jpg" title="ABANDON ALL HOPE"></a>
 <a href="https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/turn it again.jpg" title="June 10, 2019"></a>
 <a href="https://www.youtube.com/watch?v=y-JqH1M4Ya8&feature=youtu.be&t=120" target="_blank"><img src="images/bluebird.jpg" title="June 9, 2019"></a>
 <img src="images/dolly.jpg" title="June 8, 2019">
