--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
+<img src="images/champ.jpg" title="June 22, 2019">
 <img src="images/fallingwater.jpg" title="June 21, 2019">
 <a href="https://www.youtube.com/watch?v=qD_a_4J-E0I" target="_blank"><img src="images/superhero.jpg" title="June 20, 2019"></a>
 <a href="https://www.youtube.com/watch?v=2A-uBz0gMXw" target="_blank"><img src="images/portrait of the artist 6.19.19.jpg" title="June 19, 2019"></a>
