--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ img {
 }
 </style>
 
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
+
+<img src="images/portrait of the artist 7.1.19.jpg" title="July 1, 2019">
+
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
 
 <a href="https://www.tomspage.org/images/colossus.jpg" target="_blank"><img src="images/old lady.jpg" title="June 30, 2019"></a>
