--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ img {
 <img src="images/george.jpg" title="June 15, 2019">
 <img src="images/one.jpg" title="June 15, 2019">
 <img src="images/cycle.jpg" title="June 14, 2019">
-<img src="images/wild.jpg" title="June 14, 2019">
+<img src="images/wild 6.14.19.jpg" title="June 14, 2019">
 <a href="https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/reflection 6.12.19.jpg" title="June 12, 2019"></a>
 <a href="https://commons.wikimedia.org/wiki/File:Gustave_Dor%C3%A9_-_Dante_Alighieri_-_Inferno_-_Plate_8_(Canto_III_-_Abandon_all_hope_ye_who_enter_here).jpg" target="_blank"><img src="images/abandon.jpg" title="ABANDON ALL HOPE"></a>
 <a href="https://www.youtube.com/watch?v=o-FPsg4hLbo" target="_blank"><img src="images/turn it again.jpg" title="June 10, 2019"></a>
-<a href="https://www.youtube.com/watch?v=y-JqH1M4Ya8&feature=youtu.be&t=120" target="_blank"><img src="images/bluebird.jpg" title="June 9, 2019"></a>
+<a href="https://www.youtube.com/watch?v=y-JqH1M4Ya8&feature=youtu.be&t=120" target="_blank"><img src="images/bluebird 6.9.19.jpg" title="June 9, 2019"></a>
 <img src="images/dolly.jpg" title="June 8, 2019">
 <img src="images/eye.jpg" title="June 7, 2019">
 <img src="images/hot tip 12.jpg" title="June 6, 2019">
