--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=y9OMmH2pNfQ" target="_blank"><img src="images/one mississippi.jpg" title="July 2, 2019"></a>
 <img src="images/portrait of the artist 7.1.19.jpg" title="July 1, 2019">
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
