--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<img src="images/petty pace" title="July 5, 2019">
+<a href="https://www.tomspage.org/images/deformation.jpg" target="_blank"><img src="images/declaration.jpg" title="July 4, 2019"></a>
 <a href="https://www.youtube.com/watch?v=_HRgm2tZc-A" target="_blank"><img src="images/tight%21%21.jpg" title="July 3, 2019"></a>
 <a href="https://www.youtube.com/watch?v=y9OMmH2pNfQ" target="_blank"><img src="images/one mississippi.jpg" title="July 2, 2019"></a>
 <img src="images/portrait of the artist 7.1.19.jpg" title="July 1, 2019">
