--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/goose%201.jpg" target="_blank"><img src="images/here%27s to the cumulative power of one day at a time.jpg" title="July 6, 2019"></a>
 <img src="images/petty pace.jpg" title="July 5, 2019">
 <a href="https://www.tomspage.org/images/deformation.jpg" target="_blank"><img src="images/declaration.jpg" title="July 4, 2019"></a>
 <a href="https://www.youtube.com/watch?v=_HRgm2tZc-A" target="_blank"><img src="images/tight%21%21.jpg" title="July 3, 2019"></a>
