--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<img src="images/quaint.jpg" title="July 11, 2019">
 <a href="https://www.tomspage.org/images/tempest.jpg" target="_blank"><img src="images/temperate.jpg" title="July 10, 2019"></a>
 <img src="images/about.jpg" title="July 9, 2019">
 <img src="images/glamor.jpg" title="July 8, 2019">
