--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=VhinPd5RRJw&feature=youtu.be&t=219" target="_blank"><img src="images/burr shot first.jpg" title="July 12, 1804"></a>
 <img src="images/quaint.jpg" title="July 11, 2019">
 <a href="https://www.tomspage.org/images/tempest.jpg" target="_blank"><img src="images/temperate.jpg" title="July 10, 2019"></a>
 <img src="images/about.jpg" title="July 9, 2019">
