--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<img src="images/have a nice fall.jpg" title="July 16, 2019">
 <img src="images/and think about what you%27ve done.jpg" title="July 15, 2019">
 <a href="https://www.youtube.com/watch?v=qHbsdxqWYQs" target="_blank"><img src="images/young caesar.jpg" title="July 14, 2019 | Get along, Kid Charlemagne!"></a>
 <img src="images/da da.jpg" title="July 13, 2019">
