--- a/404.html
+++ b/404.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="icon" type="image/png" href="images/t favicon.png">
+</head>
+<TITLE>
+    Tom's Page
+</TITLE>
+<body>
+	</br>
+	
+<img src="images/tomspage.png" class="logo">
+<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list:</i></p>
+</body>
