--- a/404.html
+++ b/404.html
@@ -1,15 +1,11 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" type="image/png" href="images/t favicon.png">
+<style>
+body {
+  background-image: url("404.jpg");
+  background-repeat: repeat;
+}
+</style>
 </head>
-<TITLE>
-    Tom's Page
-</TITLE>
 <body>
-	</br>
-	
-<img src="images/tomspage.png" class="logo">
-<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list:</i></p>
-</body>
