--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url("404.jpg");
+  background-image: url("images/404.jpg");
   background-repeat: repeat;
 }
 </style>
