--- a/404.html
+++ b/404.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" type="image/png" href="images/t favicon.png">
+</head>
+<TITLE>
+Oops!
+  </TITLE>
 <style>
 body {
   background-image: url("images/404.jpg");
@@ -8,4 +13,3 @@ body {
 }
 </style>
 </head>
-<body>
