--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ Oops!
   </TITLE>
 <style>
 body {
-  background-image: url("images/404.jpg");
+  background-image: url("images/404 1.jpg");
   background-repeat: repeat;
 }
 </style>
