--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<img src="images/deer reader 2.jpg" title="July 18, 2019">
 <img src="images/no pressure at all.jpg" title="July 17, 2019">
 <img src="images/have a nice fall.jpg" title="July 16, 2019">
 <img src="images/and think about what you%27ve done.jpg" title="July 15, 2019">
