--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=NkefglL9c4c&t=7m12s" target="_blank"><img src="images/knowledge %28power%29.jpg" title="July 19, 2019"></a>
 <img src="images/deer reader 2.jpg" title="July 18, 2019">
 <img src="images/no pressure at all.jpg" title="July 17, 2019">
 <img src="images/have a nice fall.jpg" title="July 16, 2019">
