--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<img src="images/viral 2.jpg" title="July 22, 2019">
 <img src="images/graceful.jpg" title="July 21, 2019">
 <img src="images/giant leap.jpg" title="July 20, 1969">
 <a href="https://www.youtube.com/watch?v=NkefglL9c4c&t=7m12s" target="_blank"><img src="images/knowledge %28power%29.jpg" title="July 19, 2019"></a>
