--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
 
+<a href="https://www.instagram.com/_tomspage" target="_blank"><img src="images/hot tip 14.jpg" title="July 25, 2019 | 300 posts on Instagram!"></a>
 <img src="images/portrait of the artist 7.24.19.jpg" title="July 24, 2019">
 <a href="https://www.youtube.com/watch?v=FvQkJQyEEEk" target="_blank"><img src="images/4 me.jpg" title="July 23, 2019"></a>
 <img src="images/viral 2.jpg" title="July 22, 2019">
