--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -5,12 +5,12 @@
 <link rel="icon" type="image/png" href="images/t favicon.png">
 </head>
 <TITLE>
-    Tom's Page
+    Unsubscribe
 </TITLE>
 <body>
 	</br>
 	
-  <p style="font-family:Trebuchet MS;"><i>Submit your email address to <b>unsubscribe from</b> the daily mailing list:</i></p>
+  <p style="font-family:Trebuchet MS;"><i>Enter your email address to <b>unsubscribe from</b> the daily mailing list:</i></p>
 </body>
 
 <form action="https://formspree.io/fortomspage@gmail.com" method="POST">
@@ -26,7 +26,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #f4f7fc;
+	background-color: #ffffff;
 }
 img {
 	width: 93%;
@@ -45,3 +45,5 @@ img {
 	box-shadow: none;
 }
 </style>
+
+<img src="images/forward march.jpg" title="Come back any time!">
