--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -10,7 +10,7 @@
 <body>
 	</br>
 	
-  <p style="font-family:Trebuchet MS;"><i>Enter your email address to <b>unsubscribe from</b> the daily mailing list:</i></p>
+  <p style="font-family:Trebuchet MS;"><i>Enter your email address to <b>unsubscribe</b> from the daily mailing list:</i></p>
 </body>
 
 <form action="https://formspree.io/fortomspage@gmail.com" method="POST">
