--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -7,11 +7,14 @@
 <TITLE>
     Unsubscribe
 </TITLE>
+
+
 <body>
 	</br>
 	
-  <p style="font-family:Trebuchet MS;"><i>Enter your email address to <b>unsubscribe</b> from the daily mailing list:</i></p>
+  <p style="font-family:Trebuchet MS;"><i><b>Enter your email address to unsubscribe from the daily mailing list:</b></i></p>
 </body>
+
 
 <form action="https://formspree.io/fortomspage@gmail.com" method="POST">
   <input type="email" name="_replyto">
@@ -23,10 +26,11 @@
 </br>
 <style>
 body {
+	color: white;
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #ffffff;
+	background-color: #000000;
 }
 img {
 	width: 93%;
