--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<img src="images/poboy.jpg" title="August 5, 2019">
+<img src="images/gameplan 8.4.19.jpg" title="August 4, 2019">
 <a href="https://www.youtube.com/watch?v=yjwFdStXix8" target="_blank"><img src="images/king of the castle.jpg" title="August 3, 2019"></a>
 <img src="images/construct.jpg" title="August 2, 2019">
 <img src="images/portrait of the artist 8.1.19.jpg" title="August 1, 2019">
