--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<a href="https://upload.wikimedia.org/wikipedia/commons/b/b5/Lucas_Cranach_-_Der_Jungbrunnen_%28Gem%C3%A4ldegalerie_Berlin%29.jpg" target="_blank"><img src="images/fount.jpg" title="August 6, 2019"></a>
 <img src="images/poboy.jpg" title="August 5, 2019">
 <img src="images/gameplan 8.4.19.jpg" title="August 4, 2019">
 <a href="https://www.youtube.com/watch?v=yjwFdStXix8" target="_blank"><img src="images/king of the castle.jpg" title="August 3, 2019"></a>
