--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=Tj08Ni3tklw" target="_blank"><img src="images/arc.jpg" title="August 11, 2019"></a>
 <img src="images/QnA 8.10.19.jpg" title="August 10, 2019">
 <img src="images/pssst%21.jpg" title="August 9, 2019">
 <img src="images/colon dash slash.jpg" title="August 8, 2019">
