--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=Sca4aKdTPuY" target="_blank"><img src="images/portrait of the artist 8.14.19.jpg" title="August 14, 2019"></a>
 <img src="images/something.jpg" title="August 13, 2019">
 <a href="https://www.tomspage.org/audio/Ziggy%208.12.19-1.m4a" target="_blank"><img src="images/%22wow%2C what a beautiful day%21%22.jpg" title="August 12, 2019"></a>
 <a href="https://www.youtube.com/watch?v=Tj08Ni3tklw" target="_blank"><img src="images/arc.jpg" title="August 11, 2019"></a>
