--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=ZpIhsGg2SJ0&feature=youtu.be&t=342" target="_blank"><img src="images/the honorable.jpg" title="August 19, 2019"></a>
+<img src="images/so it goes %287.18.19%29.jpg" title="August 18, 2019">
+<img src="images/hot tip 15.jpg" title="August 16, 2019 (released August 17)">
+<img src="images/brunelleschi dreams of stars.jpg" title="August 16, 2019">
 <a href="https://www.youtube.com/watch?v=-a23rsvk_Z8" target="_blank"><img src="images/q4mach.jpg" title="August 15, 2019"></a>
 <a href="https://www.youtube.com/watch?v=Sca4aKdTPuY" target="_blank"><img src="images/portrait of the artist 8.14.19.jpg" title="August 14, 2019"></a>
 <img src="images/something.jpg" title="August 13, 2019">
