--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=9E62VjcaTEA&feature=youtu.be&t=223" target="_blank"><img src="images/talk it out till daylight.jpg" title="August 22, 2019"></a>
 <a href="https://www.youtube.com/watch?v=gqxT6KOFRIo" target="_blank"><img src="images/aoaoaoaoaoa.jpg" title="August 21, 2019 | Alleluia!!"></a>
 <a href="https://www.youtube.com/watch?v=8PpieP9Byaw" target="_blank"><img src="images/wild 8.20.19.jpg" title="August 20, 2019"></a>
 <a href="https://www.youtube.com/watch?v=ZpIhsGg2SJ0&feature=youtu.be&t=342" target="_blank"><img src="images/the honorable.jpg" title="August 19, 2019"></a>
