--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<img src="images/a ha.jpg" title="August 24, 2019">
 <a href="https://www.poetryfoundation.org/poems/53085/reluctance" target="_blank"><img src="images/king robert %28portrait of the artist 8.23.19%29.jpg" title="August 23. 2019 | 'Reluctance' by Robert Frost"></a>
 <a href="https://www.youtube.com/watch?v=9E62VjcaTEA&feature=youtu.be&t=223" target="_blank"><img src="images/talk it out till daylight.jpg" title="August 22, 2019"></a>
 <a href="https://www.youtube.com/watch?v=gqxT6KOFRIo" target="_blank"><img src="images/aoaoaoaoaoa.jpg" title="August 21, 2019 | Alleluia!!"></a>
