--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
+<img src="images/right of course.jpg" title="August 30, 2019">
 <img src="images/star sign.jpg" title="August 27, 2019">
 <img src="images/can you imagine.jpg" title="August 26, 2019">
 <img src="images/ON THE FENCE%21.jpg" title="August 25, 2019">
