--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<a href="https://upload.wikimedia.org/wikipedia/commons/0/05/Puck_cover2.jpg" target="_blank"><img src="images/what fools these.jpg" title="September 2, 2019 | What fools these mortals be!"></a>
 <a href="https://www.youtube.com/watch?v=EPIaw-MgNzM" target="_blank"><img src="images/portrait of the artist 9.1.19.jpg" title="September 1, 2019"></a>
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
