--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
-<img src="images/blind forces II.jpg" title="September 5, 2019 | 'Nature contains that which does not concern us, and has no intention of taking us into its confidence.' ">
+<img src="images/blind forces II.jpg" title="September 5, 2019 | ''Nature contains that which does not concern us, and has no intention of taking us into its confidence.'' Loren Eiseley">
 <img src="images/every night and day.jpg" title="September 4, 2019">
 <a href="https://www.youtube.com/watch?v=dTqXAf7engc" target="_blank"><img src="images/we shall all be healed %28portrait of the artist 9.3.19%29.jpg" title="September 3, 2019"></a>
 <a href="https://upload.wikimedia.org/wikipedia/commons/0/05/Puck_cover2.jpg" target="_blank"><img src="images/what fools these.jpg" title="September 2, 2019 | What fools these mortals be!"></a>
