--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<img src="images/SHALL WE ALL BE HEALED.jpg" title="September 7, 2019">
 <img src="images/timestream.jpg" title="September 6, 2019">
 <img src="images/blind forces II.jpg" title="September 5, 2019 | ''Nature contains that which does not concern us, and has no intention of taking us into its confidence''">
 <img src="images/every night and day.jpg" title="September 4, 2019">
