--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<a href="https://upload.wikimedia.org/wikipedia/commons/4/40/Gustave_Dor%C3%A9_-_Miguel_de_Cervantes_-_Don_Quixote_-_Part_1_-_Chapter_1_-_Plate_1_%22A_world_of_disorderly_notions%2C_picked_out_of_his_books%2C_crowded_into_his_imagination%22.jpg" target="_blank"><img src="images/practical tactical brilliance.jpg" title="September 9, 2019"></a>
 <img src="images/free%21 free%3F free%21%21%21.jpg" title="September 8, 2019">
 <img src="images/SHALL WE ALL BE HEALED.jpg" title="September 7, 2019">
 <img src="images/timestream.jpg" title="September 6, 2019">
