--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<img src="images/big shot.jpg" title="September 13, 2019">
 <img src="images/summation 9.12.19.jpg" title="September 12, 2019">
 <img src="images/blind forces iii.jpg" title="September 11, 2019">
 <img src="images/midst of deliverance %28portrait of the artist 9.10.19%29.jpg" title="September 10, 2019">
