--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/hot tips 1%2D16.jpg" target="_blank"><img src="images/hot tip 16.jpg" title="September 18, 2019"></a>
 <img src="images/road 9.17.19%2C or%2C a thesis on the resilience of the quixotic.jpg" title="September 17, 2019">
 <img src="images/rise up.jpg" title="September 15, 2019">
 <img src="images/the occasional hubris %28portrait of the artist 9.14.19%29.jpg" title="September 14, 2019">
