--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<img src="images/sweet dreams%3B flying machines.jpg" title="September 20, 2019">
 <img src="images/forecast 9.19.19.jpg" title="September 19, 2019">
 <a href="https://www.tomspage.org/images/hot tips 1%2D16.jpg" target="_blank"><img src="images/hot tip 16.jpg" title="September 18, 2019"></a>
 <img src="images/road 9.17.19%2C or%2C a thesis on the resilience of the quixotic.jpg" title="September 17, 2019">
