--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<img src="images/transmission 9.22.19.jpg" title="September 22, 2019">
 <img src="images/9.21.19.jpg" title="September 21, 2019">
 <img src="images/sweet dreams%3B flying machines.jpg" title="September 20, 2019">
 <img src="images/forecast 9.19.19.jpg" title="September 19, 2019">
