--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<img src="images/throw out your gold teeth.jpg" title="September 24, 2019">
 <img src="images/dear diary 9.23.19.jpg" title="September 23, 2019">
 <img src="images/transmission 9.22.19.jpg" title="September 22, 2019">
 <img src="images/9.21.19.jpg" title="September 21, 2019">
