--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
-<a href="https://youtu.be/s_0eLeALqqc" target="_blank"><img src="images/finders.jpg" title="September 26, 2019"></a>
+<a href="https://youtu.be/s_0eLeALqqc" target="_blank"><img src="images/the wheel.jpg" title="September 27, 2019"></a>
+<a href="http://watchout4snakes.com/wo4snakes/Random/RandomWord" target="_blank"><img src="images/finders.jpg" title="September 26, 2019"></a>
 <a href="https://www.youtube.com/watch?v=QzAJqKll6hI" target="_blank"><img src="images/caravan ad infinitum.jpg" title="September 25, 2019"></a>
 <img src="images/throw out your gold teeth.jpg" title="September 24, 2019">
 <img src="images/dear diary 9.23.19.jpg" title="September 23, 2019">
