--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 </style>
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
+<img src="images/fertile desert 9.30.19.jpg" title="September 30, 2019">
 <img src="images/the wheel ii.jpg" title="September 29, 2019">
 <a href="https://youtu.be/s_0eLeALqqc" target="_blank"><img src="images/the wheel.jpg" title="September 27, 2019"></a>
 <a href="http://watchout4snakes.com/wo4snakes/Random/RandomWord" target="_blank"><img src="images/finders.jpg" title="September 26, 2019"></a>
