--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ img {
 	box-shadow: none;
 }
 </style>
+
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
+
+<img src="images/portrait of the artist 10.1.19.jpg" title="October 1, 2019">
+
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
 <img src="images/fertile desert 9.30.19.jpg" title="September 30, 2019">
