--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<img src="images/lutheran.jpg" title="October 3, 2019">
 <a href="https://www.tomspage.org/images/tempest.jpg" target="_blank"><img src="images/tempest returns%2C or%2C counterresistence%2C or%2C 10.2.19.jpg" title="October 2, 2019"></a>
 <img src="images/portrait of the artist 10.1.19.jpg" title="October 1, 2019">
 
