--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<img src="images/still life.jpg" title="October 7, 2019">
 <a href="https://www.youtube.com/watch?v=4R7Mp2L3Q88" target="_blank"><img src="images/fields woods walls.jpg" title="October 6, 2019"></a>
 <img src="images/diary dear 10.5.19.jpg" title="October 5, 2019">
 <a href="https://youtu.be/HCxJ4gAt2cs?t=47" target="_blank"><img src="images/hot tip 17.jpg" title="October 4, 2019"></a>
