--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=80nphqvRKo8" target="_blank"><img src="images/the real 2.jpg" title="October 9, 2019"></a>
 <img src="images/young caesar 1766.jpg" title="October 8, 2019">
 <img src="images/still life.jpg" title="October 7, 2019">
 <a href="https://www.youtube.com/watch?v=4R7Mp2L3Q88" target="_blank"><img src="images/fields woods walls.jpg" title="October 6, 2019"></a>
