--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/loren%20eiseley%20the%20fire%20apes.png" target="_blank"><img src="images/blind forces iv.jpg" title="October 11, 2019"></a>
 <img src="images/teaser trailer.jpg" title="October 10, 2019">
 <a href="https://www.youtube.com/watch?v=80nphqvRKo8" target="_blank"><img src="images/the real 2.jpg" title="October 9, 2019"></a>
 <img src="images/young caesar 1766.jpg" title="October 8, 2019">
