--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<img src="images/whatever you want to.jpg" title="October 14, 2019">
 <img src="images/timestream ii.jpg" title="October 13, 2019">
 <img src="images/lock and.jpg" title="October 12, 2019">
 <a href="https://www.tomspage.org/images/loren%20eiseley%20the%20fire%20apes.png" target="_blank"><img src="images/blind forces iv.jpg" title="October 11, 2019"></a>
