--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<img src="images/hair match.jpg" title="October 19, 2019">
 <img src="images/duality 10.18.19.jpg" title="October 18, 2019">
 <img src="images/dimension.jpg" title="October 17, 2019">
 <img src="images/autumn leaves.jpg" title="October 16, 2019">
