--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
+<img src="images/dia.jpg" title="October 22, 2019">
 <a href="https://www.youtube.com/watch?v=uu8u_6BQsMo" target="_blank"><img src="images/win the west%2C fuck the rest.jpg" title="October 21, 2019"></a>
 <img src="images/clear as day.jpg" title="October 20, 2019">
 <img src="images/hair match.jpg" title="October 19, 2019">
