--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ img {
 }
 </style>
 
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</i></p>
+
+<img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment%201).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
+
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
 
 <img src="images/dia.jpg" title="October 22, 2019">
